--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "keywords": [
     "whatsapp-bot"
   ],
-  "author": "Ajmal-Achu",
+  "author": "Sirius",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Ajmal-Achu/Wizard-Ser/issues"
